# over5

./: AUTHORS  BUGS  ChangeLog  DISCLAIMER  LICENSE  Makefile  Makefile.in  NEWS  Over5.readme  README.BUGS  README.INSTALLING  README.linux  README.md  README.win32  THANKS  TODO  autogen.sh  boot.asc  configure  configure.in  package.mk
20bin/: FastRS  FastRS_NTSC
64bin/: DiskSlave  DiskSlave_NTSC  FastRS  FastRS_NTSC  MemSlave  MemSlaveC800  MemSlaveC800_NTSC  MemSlave_NTSC  SerFile  SerFile_NTSC  boot
bin-c64-ntsc/: diskslave_NTSC  fastrs_NTSC  memslave_NTSC  over5kernal-c64-ntsc-ram.pch  over5kernal-c64-ntsc.pch  serfile_NTSC
bin-c64-pal/: diskslave  fastrs  memslave  over5kernal-c64-pal-ram.pch  over5kernal-c64-pal.pch  serfile
bin-vic20-ntsc/: fastrs20_NTSC  fastrs20_reloc_NTSC
bin-vic20-pal/: fastrs20  fastrs20_reloc
cbm/: ChangeLog  Makefile.in  common.mk.in  configure  configure.in
cbm/fastrs/: Makefile.in  README  fastrs.asm  timing.i
cbm/kernal/: Makefile.in  TODO  kernalpatch.txt  newkernal_c64.asm  newkernal_mem.i  newkernal_vic20.asm  patchrom.asm  stripkernal_c64.asm  stripkernal_vic20.asm  testrom.asm  timing.i
cbm/servers/: Makefile.in  README  bl_block.asm  bl_mem.i  cs_main.asm  cs_mem.i  ds_main.asm  dsk_disk.asm  dsk_disknormal.asm  dsk_disksector.asm  dsk_diskturbo.asm  dsk_mem.i  dsk_pitchtrack.asm  dsk_sdisk.asm  intro.asm  macros.i  memslave.asm  ms_main.asm  ms_mem.i  pr_memtransfer.asm  pr_serfile.asm  pr_support.asm  pr_test.asm  protocol.i  sf_main.asm
doc/: 64bin-history.old  64bin.TODO  64bin.doc  ACKNOWLEDGEMENTS  Over5.TODO  Over5.doc  Over5protocol.doc  bList.doc  boot-tech.txt  boot.tech  diskslave.txt  fastrs.txt  interface.doc  interface.txt  memslave.txt  over5-history.old  over5.txt  over5kernal.txt  protocol.txt  release_test.txt  serfile.txt
over5/: .over5rc  ChangeLog  Makefile.in  README  bl_block.c  bl_serial.c  block.h  booter.asm  booter.h  cbm.h  cbm_directory.c  cbm_zipcode.c  config.h.in  config_file.c  config_file.h  configure  configure.in  convert.c  convert.h  copytail64.asm  copytail64.h  mach.c  mach.h  main.c  main.h  main_rev.h  mkinstalldirs  o5.h  o5_disk.c  o5_file.c  o5_memory.c  o5_server.c  o5_simple.c  o5protocol.h  over5.cfg  pr_protocol.c  pr_server.c  pr_simple.c  pr_support.c  protocol.h  (+4 more)
src/64server/: 6502proto.i  README.64server.source  bl_Block.asm  cs_main.asm  cs_rev  cs_rev.i  ds_main.asm  ds_mem.i  ds_rev  ds_rev.i  dsk_Disksector.asm  dsk_diskturbo.asm  dsk_diskturboold.asm  dsk_fdisk.asm  dsk_fdiskold.asm  dsk_ldisk.asm  dsk_support.asm  libdef.i  makefile  ms_main.asm  ms_rev  ms_rev.i  pr_FileTransfer.asm  pr_MemTransfer.asm  pr_RawdiskTransfer.asm  pr_SerFile.asm  pr_Support.asm  sf_main.asm  sf_mem.i  sf_rev  sf_rev.i
src/FastRS/: 6502proto.i  FastRS.asm  FastRS_rev  FastRS_rev.i  README.FastRS.source  makefile  timing.i
src/Over5/: Makefile  README.Over5.source  bl_block.c  bl_serial.c  block.h  booter.h  cbm.h  cbm_directory.c  cbm_zipcode.c  config.c  config.h  convert.c  copytail64.h  mach.c  mach.h  mach_include.h  main.c  main.h  main_rev  (+14 more)
tlrutils/: ChangeLog  Makefile.in  TODO  config.h.in  configure  configure.ac  tlrdiff.c  tlrlink.c  tlrpatch.c  tlrreloc.c  util.c  util.h
tlrutils/dasm/: patch.i
(+7 files in other folders)
