dnl***********************************************************************
dnl
dnl FILE  configure.in
dnl Copyright (c) 2000,2002 Daniel Kahlin
dnl Written by Daniel Kahlin <daniel@kahlin.net>
dnl $Id: configure.in,v 1.2 2002/05/07 19:12:31 tlr Exp $
dnl
dnl DESCRIPTION
dnl   run autoconf to produce the ./configure script from this file.
dnl
dnl******
AC_INIT(tlrutils/tlrpatch.c)
AC_CONFIG_SUBDIRS(over5 tlrutils cbm)

dnl Checks for programs.
AC_PROG_INSTALL

dnl Checks for header files.

AC_OUTPUT(Makefile)
dnl
dnl eof
dnl
